# variational-fg

./: Makefile.am  README.md  configure.ac
fg/: Makefile.am  __init__.py  clonable.hh  config.h.in  datatypes.cc  debug.hh  default-operator.hh  distribution.hh  domain.hh  exceptions.hh  factor-graph.cc  factor-graph.hh  hotnews.hh  inference-state.hh  interface.cc  linalg.hh  logarithmetics.hh  messages.hh  named-ptr.hh  node-set.hh  node-types.hh  queue.hh  strtools.hh  variational.cc  variational.hh
test/: factor-graph-test-1.py  factor-graph-test-2.py  factor-graph-test-3.py  factor-graph-test-4.py  factor-graph-test-5.py
